tests/parsing/smtlib/v2.7/errors/148_function_dec_bad_name_1.smt2
(set-logic ALL)
(define-funs-rec ((_)))
